app/assets/stylesheets/pages/_archive.scss
#archive-page {

  .modal {
    display: none;
    position: fixed;
    z-index: 10;
    left: 50%;
    top: 52.5%;
    transform: translate(-50%, -50%);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    padding: 0;
    margin: 0;
  }

  .close-button {
    position: absolute;
    top: 10px;
    right: 10px;
    color: white;
    font-size: 1.5rem;
    cursor: pointer;
    background: rgba(0, 0, 0, 0.6);
    border-radius: 50%;
    width: 32px;
    height: 32px;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 20;
    padding: 0;
  }

  .close-button:hover {
    background: rgba(0, 0, 0, 0.8);
  }
}


#archive-hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 70vh;
  position: relative;
  overflow: hidden;
  background-color: #f4f4f4;
  overflow: visible;
  margin-top: -15vh;
}

.carousel {
  width: 100%;
  height: calc(100% - 60px);
  position: relative;
}

.carousel-track-container {
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.carousel-track {
  display: flex;
  transition: transform 0.5s ease-in-out;
  height: 100%;
  margin: 0;
  padding: 0;
  list-style: none;
}

.carousel-slide {
  flex: 0 0 calc(100% / 3);
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.carousel-slide img {
  width: 100%;
  height: 100% !important;
  object-fit: cover;
  display: block;
  cursor: pointer;
}

.youtube-embed-container {
  width: 100%;
  padding-top: 56.25%;
  position: relative;
  height: 100%;
}

.youtube-embed-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.carousel-button {
  background-color: rgba(200, 200, 200, 0.2);
  color: white;
  border: none;
  cursor: pointer;
  padding: 0;
  position: absolute;
  top: 0;
  width: 70px;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
  font-size: 2.5rem;
  border-radius: 0;
  transition: background-color 0.3s ease;
}

.carousel-button.left-button {
  left: 0;
}

.carousel-button.right-button {
  right: 0;
}

.carousel-button:hover {
  background-color: rgba(100, 100, 100, 0.5);
}

#archive-footer {
  background-color: rgba(0, 0, 0, 0.1);
  color: white;
  text-align: left;
  width: 100%;
  padding: 10px 20px;
  position: absolute;
  bottom: 0;
  z-index: 1;
}

.archive-name {
  margin: 0;
  font-size: 1.2rem;
  font-weight: bolder;
}

.archive-description {
  margin: 5px 0 0;
  font-size: 1rem;
  width: 55%;
}

@media (max-width: 768px) {
  #archive-hero {
    overflow: hidden;
    margin-top: 0;
  }

  .carousel-slide {
    flex: 0 0 calc(100% / 2);
  }

  .carousel-button {
    width: 50px;
    font-size: 2rem;
  }

  #archive-footer {
    position: static;
    padding: 8px 16px;
    font-size: 1rem;
    color: black;
    background-color: white;
  }

  .archive-name {
    font-size: 1.2rem;
    font-weight: bold;
    margin: 0 0 5px 0;
  }

  .archive-description {
    font-size: 1rem;
    margin: 0;
  }

  #archive-hero {
    flex-direction: column;
    min-height: auto;
  }

  .carousel {
    height: 70vh;
  }
}

